products style rev2

--- a/SmartPhoneProducts1/CSS/products-style.css
+++ b/SmartPhoneProducts1/CSS/products-style.css
@@ -2,6 +2,8 @@
 body {
     width: 800px; 
     margin: 0 auto;
+    color: white;
+
 }
 /* Typography */  
 main {
@@ -18,7 +20,8 @@ h1 {
 div {
     border: 5px solid black;
     display: flex;
-    background-image: url("C:\Users\Matthew\OneDrive\Documents\GitHub\ITM352_F21_repo\SmartPhoneProducts1\Images\phone_globe.jpg");
+    background-image:url("../Images/phone_globe.jpg");
+    
 }
 /* Styling the products display */ 
 img {
